--- a/public/screen.css
+++ b/public/screen.css
@@ -9,4 +9,42 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  text-align: center;
+  color: #ffbea3;
+  background-color: green;
+
 }
+
+.card-shuffle {
+  font-size: 3rem;
+  font-weight: 900;
+}
+
+
+#card-rank {
+  font-size: 3rem;
+  font-weight: 900;
+}
+
+
+.shuffle {
+  border-radius: 0.5rem;
+  font-size: 2rem;
+  background-color: #ffbea3;
+  border-radius: #ffbea3;
+}
+
+.card {
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+}
+
+#card-suit {
+  text-align: left;
+  margin-top: 1.5rem;
+  margin-left: 1rem;
+}
+
+.red {
+  color: red;
